apps/nas/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.nas.${domain_absolutist_it:=absolutist.it}
spec:
  parentRefs:
  - name: internal-gw
    namespace: infrastructure
  hostnames:
  - "prowlarr.${domain_absolutist_it:=absolutist.it}"
  rules:
  - backendRefs:
    - name: prowlarr
      port: 9696
